src/test/vm/traits2.php.exp
HipHop Fatal error: Interfaces cannot use traits in src/test/vm/traits2.php on line 7
