src/test/vm/traits2.php
<?php

trait T {
}

interface I {
  use T;
}
